# ayyo-ai

./: .gitignore  package-lock.json
apps/api/: .coverage  .env.example  pyproject.toml  pytest.ini
apps/api/app/: main.py  settings.py
apps/api/app/api/dependencies/: auth.py
apps/api/app/integrations/: llm_adapter.py
apps/api/app/schemas/: core.py
apps/api/app/services/: chat_service.py  checkin_service.py  commitment_service.py  conversation_repository.py  guidance_service.py  longevity_policy.py  memory_inference_policy.py  memory_service.py  personality_enforcement_service.py  service_container.py  stream_resume_service.py
apps/api/ayyo_knox_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/db/migrations/: 001_knox_core.sql
apps/api/tests/integration/: test_auth_scope.py  test_chat_stream_sse.py  test_checkin_event_flow.py  test_guidance_generation.py  test_memory_routes.py  test_memory_scope_security.py  test_session_messages.py  test_stream_resume.py
apps/api/tests/regression/: test_knox_persona_snapshots.py  test_longevity_framing.py
apps/api/tests/unit/: test_chat_guidance_orchestration.py  test_chat_longevity_integration.py  test_chat_service.py  test_checkin_routes_unit.py  test_checkin_service.py  test_commitment_service.py  test_conversation_repository.py  test_core_schemas.py  test_guidance_service.py  test_llm_adapter.py  test_longevity_policy.py  test_memory_inference_merge.py  test_memory_inference_policy.py  test_memory_routes_unit.py  test_memory_service.py  test_personality_enforcement_service.py
docs/: env-schema.md  (+1 more)
(+48 files in other folders)
